Add fallback for order
The order of cards is slightly modified in the tablet version.
This can be supported in a non flex browser by using floats.

--- a/main.css
+++ b/main.css
@@ -173,6 +173,7 @@ section.unit article{
 	}
 	section.unit article:nth-child(3){
 		order: 4;
+		float: right;
 	}
 	section.unit article:nth-child(4){
 		order: 3;
